#2358 [Fixed] Form group: Table overflow in rich content
set "overflow-x: auto"

--- a/packages/dso-toolkit/src/components/form/form-group.scss
+++ b/packages/dso-toolkit/src/components/form/form-group.scss
@@ -60,6 +60,10 @@
     text-align: left;
   }
 
+  .dso-rich-content {
+    overflow-x: auto;
+  }
+
   legend + .dso-label-container {
     margin-bottom: units.$u1;
   }
